--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "next": "15.0.1",
         "react": "^18",
         "react-dom": "^18",
+        "react-loader-spinner": "^6.1.6",
         "server-only": "^0.0.1",
         "zod": "^3.23.8"
     },
